admin panel + taska logic

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,24 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @task.name %>
-</p>
-
-<p>
-  <strong>Url:</strong>
-  <%= @task.url %>
+<center>
+<h3>Zadanie: <%= @task.name %>&nbsp;&nbsp; <%= @categories[@lists[@task.list_id].category_id].name %>: <%= @lists[@task.list_id].name %></h3>
 </p>
 
 <p>
   <strong>Status:</strong>
-  <%= @task.status %>
+  <% if @task.status %> 
+  	<font color="green"> Zrobione &nbsp;&nbsp;&nbsp;</font> 
+  <% else %>
+  	<font color="red"> Nie zrobione &nbsp;&nbsp;&nbsp;</font>
+  <% end %>
+  <strong>Poziom trudności:</strong>
+  <% if @task.level < 2 %>
+  	<font color="green"> Łatwe </font> 
+  <% else %>
+  	<font color="red"> Trudne </font>
+  <% end %> 
 </p>
 
-<p>
-  <strong>Level:</strong>
-  <%= @task.level %>
-</p>
+<img src=<%= @task.url %> alt=<%= @task.name %>>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+</center>
