--- a/app/views/user/tasks/edit.html.erb
+++ b/app/views/user/tasks/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing task</h1>
+<h1>Edycja zadania</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+<center>
+  <a href=<%= user_category_list_path(@category, @list) %> class="button secondary"></span>Wróć</a>
+</center>
