--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,9 +3,8 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
+      <th>Kategoria</th>
+      <th>Nazwa Listy</th>
       <th></th>
     </tr>
   </thead>
@@ -13,15 +12,12 @@
   <tbody>
     <% @lists.each do |list| %>
       <tr>
+        <td><%= list.category.name %></td>
         <td><%= list.name %></td>
         <td><%= link_to 'Show', list %></td>
-        <td><%= link_to 'Edit', edit_list_path(list) %></td>
-        <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New List', new_list_path %>
