--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,12 +3,12 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Kategoria</th>
+      <th>Lista</th>
+      <th>Zadanie</th>
       <th>Url</th>
       <th>Status</th>
-      <th>Level</th>
-      <th></th>
-      <th></th>
+      <th>Poziom trudności</th>
       <th></th>
     </tr>
   </thead>
@@ -16,13 +16,13 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
+        <td><%= task.list.category.name %></td>
+        <td><%= task.list.name %></td>
         <td><%= task.name %></td>
         <td><%= task.url %></td>
         <td><%= task.status %></td>
         <td><%= task.level %></td>
         <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,3 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
