--- a/app/views/user/categories/_form.html.erb
+++ b/app/views/user/categories/_form.html.erb
@@ -1,21 +1,12 @@
-<%= form_for(@category) do |f| %>
-  <% if @category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
-
-      <ul>
-      <% @category.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= form_for [:user, @category] do |f| %>
+    
+    <table>
+      <tbody>
+        <tr>
+          <td><strong> Nazwa: </strong></td>
+          <td><%= f.text_field :name %></td>
+          <td><%= f.submit "Zatwierdź"%></td>
+        </tr>
+      </tbody>
+    </table>
 <% end %>
