--- a/app/views/user/categories/edit.html.erb
+++ b/app/views/user/categories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing category</h1>
+<h1>Edycja kategorii</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+<center>
+<a href=<%= user_categories_path %> class="button secondary"></span>Wróć</a>
+</center>
