--- a/app/views/user/categories/index.html.erb
+++ b/app/views/user/categories/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing categories</h1>
+<h1>Lista kategorii</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nazwa</th>
       <th></th>
       <th></th>
       <th></th>
@@ -13,10 +13,10 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= category.name %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><center><%= category.name %></center></td>
+        <td><%= link_to 'Pokaż', category %></td>
+        <td><%= link_to 'Edytuj', edit_user_category_path(category) %></td>
+        <td><%= link_to 'Usuń', [:user,category], method: :delete, data: { confirm: 'Jesteś pewny?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,5 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<h3> Dodaj nową kategorię</h3>
+<%= render 'form' %> 
