--- a/app/views/user/categories/show.html.erb
+++ b/app/views/user/categories/show.html.erb
@@ -1,9 +1,31 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
+<h1><%= @category.name %></h1>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Nazwa</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @category.lists.each do |list| %>
+      <tr>
+        <td><center><%= list.name %></center></td>
+        <td><%= link_to 'Pokaż', user_category_list_path(@category, list) %></td>
+        <td><%= link_to 'Edytuj', edit_user_category_list_path(@category, list) %></td>
+        <td><%= link_to 'Usuń', [:user, @category, list], method: :delete, data: { confirm: 'Jesteś pewny?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h3> Dodaj nowy rekord</h3>
+<%= render '/user/lists/form' %>
+
+<center>
+  <a href=<%= user_categories_path %> class="button secondary"></span>Wróć</a>
+</center>
