--- a/app/views/user/lists/edit.html.erb
+++ b/app/views/user/lists/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing list</h1>
+<h1>Edycja listy</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @list %> |
-<%= link_to 'Back', lists_path %>
+<center>
+  <a href=<%= user_category_path(@list.category) %> class="button secondary"></span>Wróć</a>
+</center>
