--- a/app/views/user/lists/show.html.erb
+++ b/app/views/user/lists/show.html.erb
@@ -1,9 +1,45 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @list.name %>
-</p>
+<h1><%= @list.category.name %>: <%= @list.name %></h1>
 
-<%= link_to 'Edit', edit_list_path(@list) %> |
-<%= link_to 'Back', lists_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Zadanie</th>
+      <th>Treść</th>
+      <th>Status</th>
+      <th>Poziom trudności</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @list.tasks.each do |task| %>
+      <tr>
+        <td><center><%= task.name %></center></td>
+        <td><center><a href=<%= task.url %>><%= task.url %></a></center></td>
+        <td><center><% if task.status %>
+              <font color="green"> Zrobione </font> 
+            <% else %>
+              <font color="red"> Nie zrobione </font>
+            <% end %></center></td>
+        <td><center><% if task.level < 2 %>
+              <font color="green"> Łatwe </font> 
+            <% else %>
+              <font color="red"> Trudne </font>
+            <% end %></center></td>
+        <td><%= link_to 'Pokaż', user_category_list_task_path(@list.category, @list, task) %></td>
+        <td><%= link_to 'Edytuj', edit_user_category_list_task_path(@list.category, @list, task) %></td>
+        <td><%= link_to 'Usuń', [:user, @list.category,@list, task], method: :delete, data: { confirm: 'Jesteś pewny?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h3> Dodaj nowy rekord</h3>
+<%= render '/user/tasks/form' %>
+
+<center>
+<a href=<%= user_category_path(@list.category) %> class="button secondary"></span>Wróć</a>
+</center>
