--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -28,7 +28,7 @@
                   <li class="dropdown-submenu">
                     <a tabindex="-1" href="#"><%= list.name %></a>
                       <%if list.tasks.size > 0 %>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu dropup-menu">
                           <% list.tasks.each do |task| %>
                             <% if  current_user.task_done?(task) %> 
                             <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
@@ -42,7 +42,7 @@
                             <!-- ZADANIE OZNACZONE PRZEZ CIEBIE JAKO ZA TRUDNE -->
                               <li style="background-color: #85A7FA">
                               <%= link_to task.name, category_list_task_path(category, list, task) %></li>
-                            <% elsif  task.level > 1 %>
+                            <% elsif  task.level != nil && task.level > 1 %>
                             <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
                               <li style="background-color: #F9C8C8">
                               <%= link_to task.name, category_list_task_path(category, list, task) %></li>
