--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar ">
   <div class="navbar-inner">
     <div class="container">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -23,7 +23,7 @@
             <li class="dropdown" id="accountmenu">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= category.name %><b class="caret"></b></a>
               <%if category.lists.size > 0 %>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu content">
                 <% category.lists.each do |list| %>
                   <li class="dropdown-submenu">
                     <a tabindex="-1" href="#"><%= list.name %></a>
