--- a/app/views/user/tasks/show.html.erb
+++ b/app/views/user/tasks/show.html.erb
@@ -35,7 +35,7 @@
 
 <% content_for :sidebar do %>
   <ul class="nav nav-tabs nav-stacked">
-    <% for task in @task.list.tasks %>
+    <% for task in @task.list.tasks.sort_by{|obj| obj.id} %>
       <% if  current_user.task_done?(task) %>
         <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
         <li>
@@ -45,7 +45,7 @@
         <li>
           <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #F0E76B' %></li>
       <% elsif current_user.task_too_hard?(task) %>
-        <!-- ZADANIE OZNACZONE PRZEZ CIEBIE JAKO ZA TRUDNE -->
+        <!-- ZADANIE OZNACZONE PRZEZ CIEBIE JAKO ZA TRUDNE NA NIEBIESKO-->
         <li>
           <%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %></li>
       <% elsif  task.level > 1 %>
