--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -1,30 +1,15 @@
-
-<h1>Listing lists</h1>
+<h2>Statystyki</h2>
 
 <table>
-  <thead>
-    <tr>
-      <th>Kategoria</th>
-      <th>Nazwa Listy</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
   <tbody>
     <% @lists.each do |list| %>
       <tr>
-        <td><%= list.category.name %></td>
-        <td><%= list.name %></td>
-        <td><%= link_to 'Show', list %></td>
-        <td><%= link_to 'Edit', edit_list_path(list) %></td>
-        <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td style="background-color:yellow;"><%= list.name %></td>
+        <% list.tasks.each do |task| %>
+          <td><%= task.name %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'Nowa lista', new_list_path %>
