--- a/app/views/user/tasks/show.html.erb
+++ b/app/views/user/tasks/show.html.erb
@@ -9,7 +9,7 @@
       <font color="red"> Nie zrobione &nbsp;&nbsp;&nbsp;</font>
     <% end %>
     <strong>Poziom trudności:</strong>
-    <% if @task.level < 2 %>
+    <% if  @task.level == nil || @task.level < 2 %>
       <font color="green"> Łatwe </font>
     <% else %>
       <font color="red"> Trudne </font>
@@ -48,10 +48,11 @@
         <!-- ZADANIE OZNACZONE PRZEZ CIEBIE JAKO ZA TRUDNE NA NIEBIESKO-->
         <li>
           <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #85A7FA' %></li>
-      <% elsif  task.level > 1 %>
+      <% elsif  task.level != nil && task.level > 1 %>
         <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
         <li>
-          <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #F9C8C8' %></li>
+          <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #F9C8C8' %>
+          </li>
       <% else %>
         <!-- ZADANIE PROSTE NIE ZROBIONE -->
         <li><%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %></li>
