lists of caregory in statistics

--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -3,7 +3,7 @@
 <table>
 
   <tbody>
-    <% @lists.each do |list| %>
+    <% @category.lists.each do |list| %>
       <tr>
         <td style="background-color:yellow;"><%= list.name %></td>
         <% list.tasks.each do |task| %>
