--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -10,7 +10,7 @@
           <% if  task.status %>
             <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
             <td style='background-color: #A5D28C'>
-              <%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %></td>\
+              <%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %></td>
           <% elsif  task.level != nil && task.level > 1 %>
             <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
             <td style='background-color: #F9C8C8'>
