--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -5,11 +5,18 @@
   <tbody>
     <% @category.lists.sort_by{|obj| obj.name.to_i}.each do |list| %>
       <tr>
-        <td style="background-color:yellow; border-style:solid;border-width:1px;"><%= list.name %></td>
+        <td style="background-color:yellow; border-style:solid;border-width:1px;">
+          <center>
+          <%= list.name %>
+          </center>
+        </td>
         <% list.tasks.sort_by{|obj| obj.name.to_i}.each do |task| %>
           <% if  task.status %>
             <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
             <td style='background-color: #A5D28C; border-style:solid;border-width:1px;'>
+          <% elsif  task.too_hard? %>
+            <!-- ZADANIE ZA TRUDNE NA NIEBIESKO -->
+            <td style='background-color: #85A7FA; border-style:solid;border-width:1px;'>
           <% elsif  task.level != nil && task.level > 1 %>
             <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
             <td style='background-color: #F9C8C8; border-style:solid;border-width:1px;'>
