--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -22,8 +22,22 @@
   </tbody>
 </table>
 
-<center><strong><h3>Postęp</h3></strong></center>
+<center><strong><h3>Ogólny postęp</h3></strong></center>
 
+<table>
+  <tbody>
+    <tr>
+      <td style='background-color: #A5D28C;'>
+        <center>Zrobione </center></td>
+      <td style='background-color: #85A7FA;'>
+        <center>Zgłoszone jako za trudne</center></td>
+      <td style='background-color: #F9C8C8;'>
+        <center>Nie zrobione - trudne </center></td>
+      <td style='background-color: #FFFFFF;'>
+        <center>Nie zrobione - łatwe</center></td>
+    </tr>
+  </tbody>
+</table>
 <table>
 
   <tbody>
