--- a/app/views/user/lists/index.html.erb
+++ b/app/views/user/lists/index.html.erb
@@ -38,36 +38,42 @@
     </tr>
   </tbody>
 </table>
-<table>
 
-  <tbody>
-    <% @category.lists.sort_by{|obj| obj.name.to_i}.each do |list| %>
-      <tr>
-        <td style="background-color: yellow; border-style:solid;border-width:1px;">
-          <center><strong>
-            <%= list.name %>
-          </strong></center>
-        </td>
-        <% list.tasks.sort_by{|obj| obj.name.to_i}.each do |task| %>
-          <% if  task.status %>
-            <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
-            <td style='background-color: #A5D28C; border-style:solid;border-width:1px;'>
-          <% elsif  task.too_hard? %>
-            <!-- ZADANIE ZA TRUDNE NA NIEBIESKO -->
-            <td style='background-color: #85A7FA; border-style:solid;border-width:1px;'>
-          <% elsif  task.level != nil && task.level > 1 %>
-            <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
-            <td style='background-color: #F9C8C8; border-style:solid;border-width:1px;'>
-          <% else %>
-            <!-- ZADANIE PROSTE NIE ZROBIONE -->
-            <td style='background-color: #FFFFFF; border-style:solid;border-width:1px;'>
-          <% end %>
-              <center>
-              <%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %>
-              </center>
+<% @categories.each do |category| %>
+  <% if !category.lists.empty? %>
+    <center><strong><h4><%= category.name %></h4></strong></center>
+    <table>
+
+      <tbody>
+        <% category.lists.sort_by{|obj| obj.name.to_i}.each do |list| %>
+          <tr>
+            <td style="background-color: yellow; border-style:solid;border-width:1px;">
+              <center><strong>
+                <%= list.name %>
+              </strong></center>
             </td>
+            <% list.tasks.sort_by{|obj| obj.name.to_i}.each do |task| %>
+              <% if  task.status %>
+                <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
+                <td style='background-color: #A5D28C; border-style:solid;border-width:1px;'>
+              <% elsif  task.too_hard? %>
+                <!-- ZADANIE ZA TRUDNE NA NIEBIESKO -->
+                <td style='background-color: #85A7FA; border-style:solid;border-width:1px;'>
+              <% elsif  task.level != nil && task.level > 1 %>
+                <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
+                <td style='background-color: #F9C8C8; border-style:solid;border-width:1px;'>
+              <% else %>
+                <!-- ZADANIE PROSTE NIE ZROBIONE -->
+                <td style='background-color: #FFFFFF; border-style:solid;border-width:1px;'>
+              <% end %>
+                  <center>
+                  <%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %>
+                  </center>
+                </td>
+            <% end %>
+          </tr>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      </tbody>
+    </table>
+  <% end %>
+<% end %>
