--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -20,20 +20,61 @@
 <br>
   <img src=<%= @task.url %> alt=<%= @task.name %>><br>
 <br>
+<% if user_signed_in? %>
+      <% if current_user.task_done?(@task)  %>
+        <strong> <span class="icon ok"/> <font color="green"> Zadanie zrobione &nbsp;&nbsp;&nbsp;</font> </strong>
+        <a href=<%= im_done_cancel_category_list_task_path(@task.list.category, @task.list, @task)  %> class="button alert small"><span class="icon remove"></span>Anuluj</a>
+      <% else %>
+        <% if current_user.task_too_hard?(@task) %>
+          <strong> <span class="icon warning-sign"/> <font color="red"> Zadanie za trudne &nbsp;&nbsp;&nbsp;</font> </strong>
+          <a href=<%= too_hard_cancel_category_list_task_path(@task.list.category, @task.list, @task)  %> class="button alert small"><span class="icon remove"></span>Anuluj</a>
+        <% else %>
+          <a href=<%= im_done_category_list_task_path(@task.list.category, @task.list, @task)  %> class="button success normal"><span class="icon ok"></span>Zrobione</a>
+          <a href=<%= too_hard_category_list_task_path(@task.list.category, @task.list, @task)  %> class="button info normal"><span class="icon warning-sign"></span>Za trudne</a>
+        <% end %>
+      <% end %>
+<% end %>
 
 </center>
 
 <% content_for :sidebar do %>
+  <center><h5><strong> <%= @task.list.category.name %>: <%= @task.list.name %> </strong></h5></center><br>
   <ul class="nav nav-tabs nav-stacked">
-    <% for task in @task.list.tasks.sort_by{|obj| obj.name.to_i} %>
-      <% if  task.level > 1 %>
-        <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
-        <li>
-          <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #F9C8C8' %></li>
-      <% else %>
-        <!-- ZADANIE PROSTE NIE ZROBIONE -->
-        <li><%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %></li>
-      <% end %>
+    <% if user_signed_in? %>
+        <% for task in @task.list.tasks.sort_by{|obj| obj.name.to_i} %>
+          <% if  current_user.task_done?(task) %>
+            <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
+            <li>
+              <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #A5D28C' %></li>
+          <% elsif task.status %>
+            <!-- ZADANIE ZROBIONE PRZEZ KOGOS INNEGO NA ŻÓŁTO -->
+            <li>
+              <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #F0E76B' %></li>
+          <% elsif current_user.task_too_hard?(task) %>
+            <!-- ZADANIE OZNACZONE PRZEZ CIEBIE JAKO ZA TRUDNE NA NIEBIESKO-->
+            <li>
+              <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #85A7FA' %></li>
+          <% elsif  task.level != nil && task.level > 1 %>
+            <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
+            <li>
+              <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #F9C8C8' %>
+              </li>
+          <% else %>
+            <!-- ZADANIE PROSTE NIE ZROBIONE -->
+            <li><%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %></li>
+          <% end %>
+        <% end %>
+    <% else %> 
+        <% for task in @task.list.tasks.sort_by{|obj| obj.name.to_i} %>
+            <% if  task.level > 1 %>
+              <!-- ZADANIE NIE ZROBIONE TRUDNE NA CZERWONO-->
+              <li>
+                <%= link_to task.name, category_list_task_path(task.list.category, task.list, task), :style => 'background-color: #F9C8C8' %></li>
+            <% else %>
+              <!-- ZADANIE PROSTE NIE ZROBIONE -->
+              <li><%= link_to task.name, category_list_task_path(task.list.category, task.list, task) %></li>
+            <% end %>
+          <% end %>
     <% end %>
   </ul>
 <% end %>
