--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dyskretna</title>
+  <title>Pass Exam</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -34,10 +34,6 @@
                                       <% if  current_user.task_done?(task) %> 
                                       <!-- ZADANIE ZROBIONE PRZEZ CIEBIE NA ZIELONO -->
                                         <li style="background-color: #A5D28C">
-                                        <%= link_to task.name, category_list_task_path(category, list, task) %></li>
-                                      <% elsif task.status %>
-                                      <!-- ZADANIE ZROBIONE PRZEZ KOGOS INNEGO NA ŻÓŁTO -->
-                                        <li style="background-color: #F0E76B">
                                         <%= link_to task.name, category_list_task_path(category, list, task) %></li>
                                       <% elsif current_user.task_too_hard?(task) %>
                                       <!-- ZADANIE OZNACZONE PRZEZ CIEBIE JAKO ZA TRUDNE NA NIEBIESKO-->
@@ -79,12 +75,12 @@
                     <strong><%= current_user.email.split("@").first.upcase %></strong> 
                     jesteś przygotowany w <strong><%= current_user.task_counter %> % </strong>&nbsp;&nbsp;&nbsp;
                     <a href=<%= user_progresses_path %> class="button tiny secondary"> <span class="icon trophy"></span>Statystyki</a>
-                    <%= link_to "Admin panel", user_path, :class => 'button tiny' %> 
-                    <%= link_to 'Edit profile', edit_user_registration_path, :class => 'button tiny' %> 
-                    <a href="<%= destroy_user_session_path %>" data-method="delete" rel="nofollow" class="button tiny secondary alert" class = 'button small alert' > <span class="icon off"></span>Logout </a>
+                    <%= link_to "Panel Admina", user_path, :class => 'button tiny' %> 
+                    <%= link_to 'Edytuj konto', edit_user_registration_path, :class => 'button tiny' %> 
+                    <a href="<%= destroy_user_session_path %>" data-method="delete" rel="nofollow" class="button tiny secondary alert" class = 'button small alert' > <span class="icon off"></span>Wyloguj</a>
                 <% else %>
-                    <a href="<%= new_user_session_path %>" class="button secondary"  ><span class='icon user'></span> Login</a>
-                    <a href="<%= new_user_registration_path %>" class="button" ><span class="icon pencil"></span>Sign up</a>
+                    <a href="<%= new_user_session_path %>" class="button secondary"  ><span class='icon user'></span>Zaloguj</a>
+                    <a href="<%= new_user_registration_path %>" class="button" ><span class="icon pencil"></span>Zarejestruj</a>
                 <% end %>
         </form>
         </ul>
@@ -93,11 +89,22 @@
   </div>
   </div>
   <div class="container" style="margin-top: 70px">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <%= yield %>
-      </div>
+      <% if @current_controller == 'tasks' and @current_action =='show' %>
+        <div class="row" style="margin-left: -30px">
+          <div class="span2">
+            <%= yield(:sidebar) %>
+          </div>
+          <div class="span10">
+            <div class="hero-unit">
+              <%= yield %>
+            </div>
+          </div>
+        </div>
+    <% else %>
+        <div class="hero-unit">
+          <%= yield %>
+        </div>
+    <% end %>
       <hr>
       <footer>
         <center><h3>Do egzaminu pozostało: <%= distance_of_time_in_words(Time.now, DateTime.civil_from_format(:local, 2014, 2, 11, 10), :locale => 'pl') %></h3></center>
