--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <center>
-	<img src="http://img3.stylowi.pl//images/items/o/201304/stylowi_pl_humor_pingwin-motywacyjny-_6426304.gif" alt="Motywacja" /><br>
+	<img src="/pinguin.gif" alt="Motywacja" /><br>
 	<% if user_signed_in? %>
 		<a href=<%= user_no_progresses_path %> class="button secondary"></span>Lista trudnych zadań</a>
 	<% end %>
