--- a/app/views/spa/index.html.erb
+++ b/app/views/spa/index.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pass Exam: Maematyka Dyskretna</title>
+  <title>Pass Exam: Matematyka Dyskretna</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "spa" %>
   <%= csrf_meta_tags %>
   </head>
   <body>
@@ -74,7 +74,9 @@
             <% if user_signed_in? %>
                     <strong><%= current_user.email.split("@").first.upcase %></strong> 
                     jesteś przygotowany w <strong><%= current_user.task_counter %> % </strong>&nbsp;&nbsp;&nbsp;
-                    <a href=<%= user_progresses_path %> class="button tiny secondary"> <span class="icon trophy"></span>Statystyki</a>
+                    <button class="button tiny secondary" id="statistic-button"> 
+                      <span class="icon trophy"></span>Statystyki
+                    </button>
                     <%= link_to "Panel Admina", user_categories_path, :class => 'button tiny' %> 
                     <%= link_to 'Edytuj konto', edit_user_registration_path, :class => 'button tiny' %> 
                     <a href="<%= destroy_user_session_path %>" data-method="delete" rel="nofollow" class="button tiny secondary alert" class = 'button small alert' > <span class="icon off"></span>Wyloguj</a>
@@ -88,27 +90,110 @@
     </div>
   </div>
   </div>
-  <div class="container" style="margin-top: 70px">
-      <% if @current_controller == 'tasks' and @current_action =='show' %>
-        <div class="row" style="margin-left: -30px">
-          <div class="span2">
-            <%= yield(:sidebar) %>
-          </div>
-          <div class="span10">
-            <div class="hero-unit">
-              <%= yield %>
-            </div>
-          </div>
-        </div>
-    <% else %>
-        <div class="hero-unit">
-          <%= yield %>
-        </div>
-    <% end %>
+    <script type ="x-handlebars-template" id="hero-template" >
+      <div class="hero-unit">
+        <div id="content">
+        </div> 
+      </div>
+    </script>
+    <script type ="x-handlebars-template" id="footer-template" >
       <hr>
       <footer>
         <center><h3>Do egzaminu pozostało: <%= distance_of_time_in_words(Time.now, DateTime.civil_from_format(:local, 2014, 2, 24, 10), :locale => 'pl') %></h3></center>
       </footer>
+    </script>
+
+    <script type ="x-handlebars-template" id="motivation-template" >
+      <center>
+        <img src="/pinguin.gif" alt="Motywacja" /><br>
+        <% if user_signed_in? %>
+          <button class="button secondary" id="noprogresses-button">Lista trudnych zadań</button>
+        <% end %>
+      </center>
+    </script>
+
+<!-- NO PROGRESSES -->
+    <script type ="x-handlebars-template" id="noprogresses-template" >
+        <% if user_signed_in? %>
+          <center>
+            <h3>Lista trudnych zadań</h3>
+            <div id="noprogresses-table">
+            </div>
+            <button class="button secondary" id="comeback-button">Wróć</button>
+          </center>
+        <% end %>
+    </script>
+    <script type ="x-handlebars-template" id="noprogresses-record-template" >
+      <tr>
+        <td><center> {{category}} </center></td>
+        <td><center> {{list}} </center></td>
+        <td id="link-to-task"><center><strong>{{task}}</strong></center></td>
+        <td><center>{{user}}</center></center>
+      </tr>
+    </script>
+    <script type ="x-handlebars-template" id="table-noprogresses-template" >
+        <table>
+          <thead>
+            <tr>
+              <th>Kategoria</th>
+              <th>Lista</th>
+              <th>Zadanie</th>
+              <th>Zgłoszone przez</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            {{tbody}}
+          </tbody>
+        </table>
+    </script>
+
+<!-- STATISTIC -->
+    <script type ="x-handlebars-template" id="statistic-template" >
+        <center><strong><h3>Ranking</h3></strong></center>
+        <div id="ranking-table">
+        </div>
+
+        <center><strong><h3>Postęp w nauce</h3></strong></center>
+
+        <table>
+          <tbody>
+            <tr>
+              <td style='background-color: #A5D28C;'>
+                <center>Zrobione </center></td>
+              <td style='background-color: #85A7FA;'>
+                <center>Zgłoszone jako za trudne</center></td>
+              <td style='background-color: #F9C8C8;'>
+                <center>Nie zrobione - trudne </center></td>
+              <td style='background-color: #FFFFFF;'>
+                <center>Nie zrobione - łatwe</center></td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div id="progress-table">
+        </div>s
+    </script>
+
+  <div id="main" class="container" style="margin-top: 70px">
+
+      <!-- <% if @current_controller == 'tasks' and @current_action =='show' %>
+              <div class="row" style="margin-left: -30px">
+                <div class="span2">
+                  <%= yield(:sidebar) %>
+                </div>
+                <div class="span10">
+                  <div class="hero-unit">
+                    <%= yield %>
+                  </div>
+                </div>
+              </div>
+          <% else %>
+              <div class="hero-unit">
+                <%= yield %>
+              </div>
+          <% end %> -->
+
   </div>
 </div>
 
