SPA app noprogresses table problem

--- a/app/views/spa/index.html.erb
+++ b/app/views/spa/index.html.erb
@@ -124,12 +124,14 @@
         <% end %>
     </script>
     <script type ="x-handlebars-template" id="noprogresses-record-template" >
+    dupa
       <tr>
         <td><center> {{category}} </center></td>
         <td><center> {{list}} </center></td>
         <td id="link-to-task"><center><strong>{{task}}</strong></center></td>
-        <td><center>{{user}}</center></center>
+        <td><center>{{user}}</center></td>
       </tr>
+      kupa
     </script>
     <script type ="x-handlebars-template" id="table-noprogresses-template" >
         <table>
